<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/invite_person"
        android:title="@string/nav_view_invite_user"
        android:icon="@drawable/ic_person_add_white_24dp"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/open_conversation"
        android:title="@string/nav_view_open_conversation"
        android:icon="@drawable/ic_chat_white_24dp"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
