<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="phoneNumber"
            type="String" />
    </data>

    <RelativeLayout
        style="@style/AppTheme.NoActionBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.event2go.app.activity.LoginActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<ImageView-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="125dp"-->
            <!--android:contentDescription="@string/logo"-->
            <!--android:src="@drawable/logo" />-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/grey_rich"
                android:textSize="30sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:gravity="center"
                android:text="@string/lets_start"
                android:textColor="@color/grey_rich"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/questionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@{@string/signup_enter_code(phoneNumber)}"
                android:textColor="@color/grey_rich"
                tools:text="It was sent in an SMS message"/>

            <TextView
                android:id="@+id/subtitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="6dp"
                android:textColor="@color/grey_rich"
                android:visibility="gone" />

            <EditText
                android:id="@+id/codeField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_sms_code"
                android:inputType="numberDecimal"
                android:textColorHint="@color/grey_rich" />

            <TextView
                android:id="@+id/codeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/grey_rich" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_normal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/backButton"
                    style="@style/Event2go.ButtonStyle.Red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/sendCodeButton"
                    style="@style/Event2go.ButtonStyle.Red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_big"
                    android:layout_gravity="center"
                    android:text="@string/send" />
            </LinearLayout>


        </LinearLayout>

        <ProgressBar
            android:id="@+id/loadingSpinner"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="false"
            android:visibility="gone" />

    </RelativeLayout>
</layout>