<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.event2go.app.features.user.data.User" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_normal"
            android:background="@android:color/white"
            android:fillViewport="true"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <!--<include-->
                <!--android:id="@+id/toolbar"-->
                <!--layout="@layout/toobar" />-->

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toolbar">

                    <EditText
                        android:id="@+id/phoneNumberField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nameLabel"
                        android:drawableEnd="@drawable/ic_lock_outline_black_24dp"
                        android:drawableRight="@drawable/ic_lock_outline_black_24dp"
                        android:drawableTint="@color/grey_rich"
                        android:hint="@string/hint_phone_number"
                        android:inputType="phone"
                        android:focusable="false"
                        android:text="@{'+' + user.username}"
                        android:textColor="@color/primary"
                        android:textColorHint="@color/grey_rich"
                        tools:text="XXX XXX XXX XXX" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/nameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Name"
                        android:singleLine="true"
                        android:text="@{user.name}"
                        android:textColor="@color/primary"
                        android:textColorHint="@color/light_grey"
                        android:textSize="@dimen/text_size_normal"
                        tools:text="Vasily Pupkin" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:maxLength="128"
                        android:singleLine="true"
                        android:textColor="@color/primary"
                        android:textColorHint="@color/light_grey"
                        android:textSize="@dimen/text_size_normal" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/settingsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/settings"
                    android:textColor="@color/grey_medium" />

                <!--<Switch-->
                    <!--android:id="@+id/settings_notification"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:layout_marginBottom="@dimen/margin_normal"-->
                    <!--android:layout_marginTop="@dimen/margin_normal"-->
                    <!--android:text="@string/mute_notifications"-->
                    <!--android:textColor="@color/primary" />-->

                <!--<View-->
                <!--android:id="@+id/divider1"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="@color/dividerColor" />-->

                <!--<Switch-->
                <!--android:id="@+id/setting2"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="70dp"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:background="@color/primary"-->
                <!--android:paddingLeft="25dp"-->
                <!--android:text="Iron Legion"-->
                <!--android:textColor="@color/primary" />-->

                <!--<View-->
                <!--android:id="@+id/divider2"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="@color/dividerColor" />-->

                <!--<Switch-->
                <!--android:id="@+id/setting3"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="70dp"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:background="@color/primary"-->
                <!--android:paddingLeft="25dp"-->
                <!--android:text="Theta Protocol"-->
                <!--android:textColor="@color/primary" />-->

                <Button
                    android:id="@+id/saveSettingsButton"
                    style="@style/Event2go.ButtonStyle.Red"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/sign_up_another_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:textColor="@color/text_action"
                    android:gravity="center"
                    android:text="@string/signup_with_another_account"
                    />

            </LinearLayout>


        </ScrollView>

    </RelativeLayout>
</layout>